optically enhanced product listing BE chosen has correct overflow and height now added to shopFunctionsF::calculateProductRowsHeights a value for product_availability
git-svn-id: https://dev.virtuemart.net/svn/virtuemart/trunk/virtuemart@8551 87cc427b-4a1e-0410-b729-b2260ec0f063

--- a/components/com_virtuemart/assets/css/chosen.css
+++ b/components/com_virtuemart/assets/css/chosen.css
@@ -55,12 +55,11 @@
   -moz-box-shadow   : 0 0 3px #ffffff inset, 0 1px 1px rgba(0,0,0,0.1);
   box-shadow        : 0 0 3px #ffffff inset, 0 1px 1px rgba(0,0,0,0.1);
   display: block;
-  overflow: visible !important;
+  overflow: auto !important;
   white-space: nowrap;
   position: relative;
-  height: 1,7em;
+  height: 1.7em;
   line-height: 1.7em;
-
   padding: 0 0 0 8px;
   color: #444444;
   text-decoration: none;
@@ -234,7 +233,7 @@
 /* @group Results */
 .chzn-container .chzn-results {
   margin: 0 4px 4px 0;
-  max-height: 240px;
+  max-height: 400px;
   padding: 0 0 0 4px;
   position: relative;
   overflow-x: hidden;
@@ -415,10 +414,10 @@ div.moduletable_js div.slide, div.moduletable_js div.module_content{
     overflow:visible !important;
 }
 
-#header .chzn-results {
+/*#header .chzn-results {
     position: relative;
     overflow: visible !important;
     text-align: left;
     margin: 0.2em 0;
     padding: 0 0 0 0.5em;
-}
+}*/
